# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Select the desired branding flavor. False means normal Chromium branding,
  # true means official Google Chrome branding (requires extra Google-internal
  # resources).
  is_chrome_branded = false

  # Break chrome.dll into multple pieces based on process type. Only available
  # on Windows.
  is_multi_dll_chrome = is_win && !is_component_build

  # Turn this on to generate order files. See
  # https://chromium.googlesource.com/chromium/src/+/master/docs/win_order_files.md
  generate_order_files = false
}

# Refers to the subdirectory for branding in various places including
# chrome/app/theme.
if (is_chrome_branded) {
  branding_path_component = "google_chrome"
} else {
  branding_path_component = "chromium"
}
