# Copyright (c) 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Enables DCHECKs to be built-in, but to default to being non-fatal/log-only.
  # DCHECKS can then be set as fatal/non-fatal via the DCheckIsFatal feature.
  # See crbug.com/596231 for details on how this is used.
  dcheck_is_configurable = false
}

declare_args() {
  # Set to true to enable dcheck in Release builds.
  dcheck_always_on = dcheck_is_configurable
}
