# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/goma.gni")

declare_args() {
  # Precompiled header file support is by default available,
  # but for distributed build system uses (like goma) or when
  # doing official builds.
  enable_precompiled_headers = !is_official_build && !use_goma
}
